# O3FESA

./: .gitignore  CMakeLists.txt  LICENSE  Matrix.md  README.md  mesh.inp.in
doc/logo/: main.tex
doc/manual/theory_manual/: .gitignore  main.aux  main.fdb_latexmk  main.fls  main.loc  main.out  main.soc  main.tex
include/: Boundary.hpp  CLoad.hpp  DLoad.hpp  Dofs.hpp  Element.hpp  Elements.hpp  FEModel.hpp  FEModelIO.hpp  IO.hpp  Isotropic.hpp  Lamina.hpp  Material.hpp  Materials.hpp  Node.hpp  O3FESA.hpp  Q4.hpp  Q9.hpp  Quadature.hpp  Quadrature.hpp  S4.hpp  S9.hpp  Section.hpp  Step.hpp  Time.hpp  Triplet.hpp  VectorUtil.hpp
mesh/: mesh.inp.in  mesh.py
src/: CLoad.cpp  Element.cpp  FEModel.cpp  FEModelIO.cpp  IO.cpp  Isotropic.cpp  Lamina.cpp  Node.cpp  Q4.cpp  Q9.cpp  S4.cpp  S9.cpp  Section.cpp  Triplet.cpp  VectorUtil.cpp  main.cpp
